--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "precedent",
+  "name": "vpp-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -33,6 +33,7 @@
     "ms": "^2.1.3",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
